--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="section" id="doing">
             <h2>What I'm doing</h2>
             <ul>
-                <li>I've created a basic WordPress plug-in for listing GitHub repos that might expand to do some more cool stuff in the future.  <a href="http://github.com/enrico/gitpress">Check it out!</a></li>
+                <li>I've created a basic WordPress plug-in for listing GitHub repos that might expand to do some more cool stuff in the future.  <a href="http://github.com/enricob/gitpress">Check it out!</a></li>
                 <li>I share my passion for learning Japanese by producing a podcast called <a href="http://thejapaneselearner.com/" title="The Japanese Learner">The Japanese Learner</a>.  The show hosts deep and interesting discussions on how to go about studying Japanese.</li>
                 <li>I write for the <a href="http://www.tenthline.com/blog/" title="Tenthline.blog()">company blog</a>, sharing my thoughts on enterprise content and identity management, among other topics in IT.</li>
                 <li>I am currently working on <a href="http://github.com/flight16/anki-sosuke" title="anki-sosuke on GitHub"><code>anki-sosuke</code></a> with <a href="http://github.com/flight16" title="flight16 - GitHub profile">flight16</a>.  <code>anki-sosuke</code> is a small web server written in Python that provides a RESTful API for interacting with <a href="http://ichi2.net/anki">Anki</a> flash card decks.</li>
