updated list of things that I'm doing and added a section, "Hire Me", with my resume in PDF

--- a/index.html
+++ b/index.html
@@ -46,41 +46,51 @@
     <body>
         <h1 id="page_title">enricob's GitHub Page</h1>
         <div class="section" id="profile">
-                <h2>About Me</h2>
-                <div class="field">
-                    <span class="label">Name:</span>
-                    <span class="value">Enrico Bianco</span>
-                </div>
-                <div class="field">
-                    <span class="label">Company:</span>
-                    <span class="value"><a href="http://www.tenthline.com/">Tenthline</a></span>
-                </div>
-                <div class="field">
-                    <span class="label">E-mail:</span>
-                    <span class="value">enricob@gmail.com</span>
-                </div>
-                <div class="field">
-                    <span class="label">Skype:</span>
-                    <span class="value">enricobianco</span>
-                </div>
-                <div class="field">
-                    <span class="label">Twitter:</span>
-                    <span class="value"><a href="http://twitter.com/enricobianco" title="My Twitter Profile">enricobianco</a></span>
-                </div>
-                <div class="field">
-                    <span class="label">LinkedIn:</span>
-                    <span class="value"><a href="http://www.linkedin.com/in/enricobianco" title="My LinkedIn Profile">http://www.linkedin.com/in/enricobianco</a></span>
-                </div>
-            </dl>
+          <h2>About Me</h2>
+            <div class="field">
+              <span class="label">Name:</span>
+              <span class="value">Enrico Bianco</span>
+            </div>
+            <div class="field">
+              <span class="label">Company:</span>
+              <span class="value"><a href="http://www.tenthline.com/">Tenthline</a></span>
+            </div>
+            <div class="field">
+              <span class="label">E-mail:</span>
+              <span class="value">enricob@gmail.com</span>
+            </div>
+            <div class="field">
+              <span class="label">Skype:</span>
+              <span class="value">enricobianco</span>
+            </div>
+            <div class="field">
+              <span class="label">Twitter:</span>
+              <span class="value"><a href="http://twitter.com/enricobianco" title="My Twitter Profile">enricobianco</a></span>
+            </div>
+            <div class="field">
+              <span class="label">LinkedIn:</span>
+              <span class="value"><a href="http://www.linkedin.com/in/enricobianco" title="My LinkedIn Profile">http://www.linkedin.com/in/enricobianco</a></span>
+            </div>
+          </dl>
+        </div>
+        <div class="section" id="hire_me">
+          <h2>Hire Me!</h2>
+          <p>I am currently looking for full-time or contract Ruby on Rails development work,
+          preferably remote or in the Greater Toronto Area; re-location is not an option for
+          me rightnow, unfortunately.</p>
+          <p>Here's my resume: <a href="resume.pdf" title="Resume - Enrico Bianco">PDF</a></p>
+          <h2>Recent Projects</h2>
+          <ul>
+            <li><a href="http://github.com/enricob/timesheets" title="enricob's timesheets at master - GitHub">timesheets</a>: a small toy application I wrote for a job interview. Took me about 1.5 weeks and in the process I learned Rspec, Dataset, and Shoulda. I've released it on GitHub and continue to tinker with it.</li>
+          </ul>
         </div>
         <div class="section" id="doing">
-            <h2>What I'm doing</h2>
-            <ul>
-                <li>I've created a basic WordPress plug-in for listing GitHub repos that might expand to do some more cool stuff in the future.  <a href="http://github.com/enricob/gitpress">Check it out!</a></li>
-                <li>I share my passion for learning Japanese by producing a podcast called <a href="http://thejapaneselearner.com/" title="The Japanese Learner">The Japanese Learner</a>.  The show hosts deep and interesting discussions on how to go about studying Japanese.</li>
-                <li>I write for the <a href="http://www.tenthline.com/blog/" title="Tenthline.blog()">company blog</a>, sharing my thoughts on enterprise content and identity management, among other topics in IT.</li>
-                <li>I am currently working on <a href="http://github.com/flight16/anki-sosuke" title="anki-sosuke on GitHub"><code>anki-sosuke</code></a> with <a href="http://github.com/flight16" title="flight16 - GitHub profile">flight16</a>.  <code>anki-sosuke</code> is a small web server written in Python that provides a RESTful API for interacting with <a href="http://ichi2.net/anki">Anki</a> flash card decks.</li>
-                <li>In the near future, I will begin working on <code>AnkiReviewer</code>, a Mac OS X Dashboard widget for reviewing <a href="http://ichi2.net/anki">Anki</a> decks.  It will be able to work against both offline and online decks.</li>
+          <h2>What I'm doing</h2>
+          <ul>
+            <li>Various dabbling with Ruby on Rails development and BDD using <a href="http://rspec.info">RSpec</a>. I'm currently looking for full-time and/or contract work (see above).</li>
+            <li>I've created a basic WordPress plug-in for listing GitHub repos that might expand to do some more cool stuff in the future.  <a href="http://github.com/enricob/gitpress">Check it out!</a></li>
+            <li>I share my passion for learning Japanese by producing a podcast called <a href="http://thejapaneselearner.com/" title="The Japanese Learner">The Japanese Learner</a>.  The show hosts deep and interesting discussions on how to go about studying Japanese.</li>
+            <li>I write for the <a href="http://www.tenthline.com/blog/" title="Tenthline.blog()">company blog</a>, sharing my thoughts on enterprise content and identity management, among other topics in IT.</li>
             </ul>
         </div>
     </body>
