--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>enricob's GitHub Page</title>
+        <title>Enrico Bianco's GitHub Page</title>
         <style>
             body {
                 width: 75%;
