updates all across the page, highlighting the many new projects that I'm working on

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
               <span class="value">Enrico Bianco</span>
             </div>
             <div class="field">
-              <span class="label">Company:</span>
-              <span class="value"><a href="http://www.tenthline.com/">Tenthline</a></span>
+              <span class="label">Blog:</span>
+              <span class="value"><a href="http://www.liveandcode.com/">Live &amp; Code</a></span>
             </div>
             <div class="field">
               <span class="label">E-mail:</span>
@@ -74,24 +74,26 @@
           </dl>
         </div>
         <div class="section" id="hire_me">
-          <h2>Hire Me!</h2>
+          <h2>Need a Web Developer?</h2>
           <p>I am currently looking for full-time or contract Ruby on Rails development work,
-          preferably remote or in the Greater Toronto Area; re-location is not an option for
+          preferably in the Greater Toronto Area or telecommuting; re-location is not an option for
           me right now, unfortunately.</p>
           <p>Here's my resume: <a href="resume.pdf" title="Resume - Enrico Bianco">PDF</a></p>
           <h2>Recent Projects</h2>
           <ul>
-            <li><a href="http://github.com/enricob/timesheets" title="enricob's timesheets at master - GitHub">timesheets</a>: a small toy application I wrote for a job interview. Took me about 1.5 weeks and in the process I learned Rspec, Dataset, and Shoulda. I've released it on GitHub and continue to tinker with it.</li>
+            <li><a href="http://en.wikibooks.org/wiki/Ruby_Hacking_Guide" title="Ruby Hacking Guide (Rubyソースコード完全解説) - WikiBooks">Ruby Hacking Guide Translation</a>: Ilya Grigorik of <a href="http://www.postrank.com/">PostRank</a> is organizing Rubyists to pick up where Vincent Isambart and Clifford Escobar left off.  I am currently working on <a href="http://en.wikibooks.org/wiki/Ruby_Hacking_Guide/Threads">Chapter 19, "Threads"</a>.
+            <li><a href="http://github.com/enricob/radiant/tree/ja_translation" title="enricob's radiant at ja_translation - GitHub">Radiant CMS in Japanese</a>: Building on <a href="http://github.com/kbingman/radiant">Keith Bingman's work</a>, I've started developing a Japanese locale for Radiant CMS.  I am helped by <a href="http://github.com/hirotaka/" title="hirotaka - GitHub">Hirotaka Mizutani</a>.</li>
+            <li><a href="http://github.com/enricob/timesheets" title="enricob's timesheets at master - GitHub">timesheets</a>: a small toy application I wrote as a test of my abilities. It took me about 1.5 weeks to develop and in the process I learned RSpec, Dataset, and Shoulda. I've released it on GitHub and continue to tinker with it.</li>
+            <li><a href="http://github.com/enricob/gitpress" title="enricob's gitpress at master - GitHub">GitPress</a>: a WordPress plugin that provides a widget for listing a GitHub user's repositories. It can also display Dr. Nic's excellent <a href="http://drnicjavascript.rubyforge.org/github_badge/">GitHub badge.</a></li>
           </ul>
         </div>
         <div class="section" id="doing">
           <h2>What I'm doing</h2>
           <ul>
-            <li>Various dabbling with Ruby on Rails development and BDD using <a href="http://rspec.info">RSpec</a>. I'm currently looking for full-time and/or contract work (see above).</li>
-            <li>I've created a basic WordPress plug-in for listing GitHub repos that might expand to do some more cool stuff in the future.  <a href="http://github.com/enricob/gitpress">Check it out!</a></li>
+            <li>I am learning to apply BDD to Ruby on Rails development with <a href="http://rspec.info">RSpec</a> and <a href="http://cukes.info/">Cucumber</a>.</li>
             <li>I share my passion for learning Japanese by producing a podcast called <a href="http://thejapaneselearner.com/" title="The Japanese Learner">The Japanese Learner</a>.  The show hosts deep and interesting discussions on how to go about studying Japanese.</li>
-            <li>I write for the <a href="http://www.tenthline.com/blog/" title="Tenthline.blog()">company blog</a>, sharing my thoughts on enterprise content and identity management, among other topics in IT.</li>
-            </ul>
+            <li>I recently bought an HTC Dream, so I sometimes experiment with <a href="http://developer.android.com/" title="Android Developers site">Android development</a>.  I am currently working on a <a href="http://www.freshbooks.com/">Freshbooks</a> time tracker.</li>
+          </ul>
         </div>
     </body>
 </html>
