--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Enrico Bianco's GitHub Page</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <style>
             body {
                 width: 75%;
