--- a/index.html
+++ b/index.html
@@ -76,24 +76,23 @@
         </div>
         <div class="section" id="hire_me">
           <h2>Need a Web Developer?</h2>
-          <p>I am currently looking for full-time or contract Ruby on Rails development work,
-          preferably in the Greater Toronto Area or telecommuting; re-location is not an option for
-          me right now, unfortunately.</p>
+          <p>I am currently employed at <a href="http://www.postrank.com/">PostRank</a> in Waterloo, but if you need a Ruby/Rails
+          developer, I might be able to help.</p>
           <p>Here's my resume: <a href="resume.pdf" title="Resume - Enrico Bianco">PDF</a></p>
           <h2>Recent Projects</h2>
           <ul>
-            <li><a href="http://en.wikibooks.org/wiki/Ruby_Hacking_Guide" title="Ruby Hacking Guide (Rubyソースコード完全解説) - WikiBooks">Ruby Hacking Guide Translation</a>: Ilya Grigorik of <a href="http://www.postrank.com/">PostRank</a> is organizing Rubyists to pick up where Vincent Isambart and Clifford Escobar left off.  I am currently working on <a href="http://en.wikibooks.org/wiki/Ruby_Hacking_Guide/Threads">Chapter 19, "Threads"</a>.
-            <li><a href="http://github.com/enricob/radiant/tree/ja_translation" title="enricob's radiant at ja_translation - GitHub">Radiant CMS in Japanese</a>: Building on <a href="http://github.com/kbingman/radiant">Keith Bingman's work</a>, I've started developing a Japanese locale for Radiant CMS.  I am helped by <a href="http://github.com/hirotaka/" title="hirotaka - GitHub">Hirotaka Mizutani</a>.</li>
-            <li><a href="http://github.com/enricob/timesheets" title="enricob's timesheets at master - GitHub">timesheets</a>: a small toy application I wrote as a test of my abilities. It took me about 1.5 weeks to develop and in the process I learned RSpec, Dataset, and Shoulda. I've released it on GitHub and continue to tinker with it.</li>
+            <li><a href="http://github.com/enricob/gabriel" title="enricob's gabriel at master - GitHub">gabriel</a>: A gem that helps you communicate with
+            <a href="http://github.com/mojombo/god">god</a> by providing bash completions.</li>
             <li><a href="http://github.com/enricob/gitpress" title="enricob's gitpress at master - GitHub">GitPress</a>: a WordPress plugin that provides a widget for listing a GitHub user's repositories. It can also display Dr. Nic's excellent <a href="http://drnicjavascript.rubyforge.org/github_badge/">GitHub badge.</a></li>
           </ul>
         </div>
         <div class="section" id="doing">
           <h2>What I'm doing</h2>
           <ul>
+            <li>I am helping the <a href="http://www.postrank.com/">PostRank</a> team to help you find the most engaging content on the web and to measure your
+            influence on the Social Web.</li>
             <li>I am learning to apply BDD to Ruby on Rails development with <a href="http://rspec.info">RSpec</a> and <a href="http://cukes.info/">Cucumber</a>.</li>
-            <li>I share my passion for learning Japanese by producing a podcast called <a href="http://thejapaneselearner.com/" title="The Japanese Learner">The Japanese Learner</a>.  The show hosts deep and interesting discussions on how to go about studying Japanese.</li>
-            <li>I recently bought an HTC Dream, so I sometimes experiment with <a href="http://developer.android.com/" title="Android Developers site">Android development</a>.  I am currently working on a <a href="http://www.freshbooks.com/">Freshbooks</a> time tracker.</li>
+            <li>I share my passion for learning Japanese by producing a podcast called <a href="http://thejapaneselearner.com/" title="The Japanese Learner">The Japanese Learner</a>. The show hosts deep and interesting discussions on how to go about studying Japanese.</li>
           </ul>
         </div>
     </body>
