Update for acquisition

--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
         </div>
         <div class="section" id="hire_me">
           <h2>Need a Web Developer?</h2>
-          <p>I am currently employed at <a href="http://www.postrank.com/">PostRank</a> in Waterloo, but if you need a Ruby/Rails
-          developer, I might be able to help.</p>
-          <p>Here's my resume: <a href="resume.pdf" title="Resume - Enrico Bianco">PDF</a></p>
+          <p>Since <a href="http://www.postrank.com/">PostRank</a> was recently acquired by Google, I am now working for Google in Mountain View, California.</p>
           <h2>Recent Projects</h2>
           <ul>
             <li><a href="http://github.com/enricob/gabriel" title="enricob's gabriel at master - GitHub">gabriel</a>: A gem that helps you communicate with
@@ -89,7 +87,7 @@
         <div class="section" id="doing">
           <h2>What I'm doing</h2>
           <ul>
-            <li>I am helping the <a href="http://www.postrank.com/">PostRank</a> team to help you find the most engaging content on the web and to measure your
+            <li>I am still helping the <a href="http://www.postrank.com/">PostRank</a> team to help you find the most engaging content on the web and to measure your
             influence on the Social Web.</li>
             <li>I am learning to apply BDD to Ruby on Rails development with <a href="http://rspec.info">RSpec</a> and <a href="http://cukes.info/">Cucumber</a>.</li>
             <li>I share my passion for learning Japanese by producing a podcast called <a href="http://thejapaneselearner.com/" title="The Japanese Learner">The Japanese Learner</a>. The show hosts deep and interesting discussions on how to go about studying Japanese.</li>
