That header is considerably less useful now.

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
             </div>
           </dl>
         </div>
-        <div class="section" id="hire_me">
-          <h2>Need a Web Developer?</h2>
+        <div class="section">
           <p>Since <a href="http://www.postrank.com/">PostRank</a> was recently acquired by Google, I am now working for Google in Mountain View, California.</p>
           <h2>Recent Projects</h2>
           <ul>
